# client-sdk-cpp

./: .build-info.json.in  .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .lycheeignore  AGENTS.md  CMakeLists.txt  CMakeLists_Cankao.txt  CMakePresets.json  CODEOWNERS  DEPENDENCIES.md  PRE_RELEASE_AUDIT.md  README.md  README_BUILD.md  build.bat  build.cmd  build.h.in  build.sh  compile_commands.json  compile_flags.txt  tidy.sh  tsan_suppressions.txt  vcpkg-configuration.json  vcpkg.json
benchmarks/data_track_throughput/: .gitignore  CMakeLists.txt  README.md  common.h  consumer.cpp  producer.cpp
benchmarks/data_track_throughput/scripts/: .gitignore  plot_throughput.py
bridge/: CMakeLists.txt  README.md
bridge/examples/: human.cpp  human_stub.cpp  robot.cpp  robot_stub.cpp
bridge/include/livekit_bridge/: bridge_audio_track.h  bridge_data_track.h  bridge_video_track.h  livekit_bridge.h  rpc_constants.h
bridge/realsense-livekit/realsense-to-mcap/: BuildFileDescriptorSet.cpp  CMakeLists.txt  README.md
bridge/src/: bridge_audio_track.cpp  bridge_data_track.cpp  bridge_room_delegate.cpp  bridge_room_delegate.h  bridge_video_track.cpp  livekit_bridge.cpp  rpc_constants.cpp  rpc_controller.cpp  rpc_controller.h  rpc_manager.cpp  rpc_manager.h
bridge/tests/: CMakeLists.txt  test_bridge_audio_track.cpp  test_bridge_data_track.cpp  test_bridge_video_track.cpp  test_callback_key.cpp  test_livekit_bridge.cpp  test_rpc_controller.cpp  test_rpc_manager.cpp
bridge/tests/common/: bridge_test_common.h
bridge/tests/integration/: test_bridge_audio_roundtrip.cpp  test_bridge_data_roundtrip.cpp  test_bridge_rpc_roundtrip.cpp
bridge/tests/stress/: test_bridge_audio_stress.cpp  test_bridge_callback_stress.cpp  test_bridge_data_stress.cpp  test_bridge_lifecycle_stress.cpp  test_bridge_multi_track_stress.cpp
bridge/tests/unit/: test_bridge_data_track.cpp  test_livekit_bridge.cpp
docs/: Doxyfile  (+15 more)
examples/: CMakeLists.txt
examples/base_sdk/logging_levels/: README.md  basic_usage.cpp  custom_sinks.cpp
examples/base_sdk/simple_joystick/: sender.cpp
examples/bridge_human_robot/: human.cpp  robot.cpp
examples/bridge_mute_unmute/: README.md  caller.cpp  receiver.cpp
examples/bridge_rpc/: README.md  custom_caller.cpp  custom_receiver.cpp
examples/cmake/: sdl3.cmake
examples/common/: fallback_capture.cpp  fallback_capture.h  sdl_media.cpp  sdl_media.h  sdl_media_manager.cpp  sdl_media_manager.h  sdl_video_renderer.cpp  sdl_video_renderer.h  wav_audio_source.cpp
examples/data_stamping/: README.md  consumer.cpp  data_alignment_manager.h  producer.cpp
examples/hello_livekit/: hello_livekit.cpp  receiver.cpp  sender.cpp
examples/human_robot/: human.cpp  robot.cpp
examples/logging_levels/: README.md  basic_usage.cpp  custom_sinks.cpp
examples/mute_unmute/: README.md  caller.cpp  receiver.cpp
examples/ping_pong/: constants.h  json_converters.cpp  json_converters.h  messages.h  ping.cpp  pong.cpp  utils.h
examples/publish_nv12_tcp_source/: README.md  main.cpp  raw_nv12_tcp_source.cpp  raw_nv12_tcp_source.h
examples/publish_yuv_source/: README.md  main.cpp  yuv_source.cpp  yuv_source.h
examples/realsense-livekit/: setup_realsense.sh
examples/realsense-livekit/realsense-to-mcap/: .gitignore  BuildFileDescriptorSet.cpp  BuildFileDescriptorSet.h  CMakeLists.txt  README.md
examples/rpc/: README.md  custom_caller.cpp  custom_receiver.cpp
examples/session_manager_base_sdk/: video_producer.cpp  video_viewer.cpp
examples/simple_data_stream/: main.cpp
examples/simple_joystick/: json_utils.cpp  json_utils.h  receiver.cpp  sender.cpp  utils.cpp  utils.h
examples/simple_robot/: human.cpp  json_utils.cpp  json_utils.h  robot.cpp  utils.cpp  utils.h
examples/simple_room/: fallback_capture.cpp  main.cpp  sdl_media_manager.cpp  sdl_video_renderer.cpp  sdl_video_renderer.h  wav_audio_source.cpp  wav_audio_source.h
examples/simple_rpc/: README  README.md  main.cpp
examples/simple_status/: consumer.cpp  producer.cpp
examples/tokens/: README.md  gen_and_set.bash  set_data_track_test_tokens.bash  set_integration_test_tokens.bash  set_test_tokens.bash
examples/user_timestamped_video/: README.md  consumer.cpp  producer.cpp
ros/src/ros2_livekit_bridge/: CMakeLists.txt  README.md  depth_time_offset_node.py  package.xml
src/session_manager/: CMakeLists.txt  README.md  managed_audio_track.cpp  managed_local_audio_track.cpp  managed_local_video_track.cpp  managed_video_track.cpp  rpc_constants.cpp  rpc_controller.cpp  rpc_controller.h  session_manager.cpp  session_manager_room_delegate.cpp  session_manager_room_delegate.h
src/session_manager/src/: bridge_room_delegate.cpp  bridge_room_delegate.h  managed_audio_track.cpp  managed_video_track.cpp  rpc_controller.cpp  rpc_controller.h  session_manager.cpp
src/session_manager/tests/: CMakeLists.txt  test_callback_key.cpp  test_managed_audio_track.cpp  test_managed_video_track.cpp  test_session_manager.cpp
src/tests/: CMakeLists.txt  token_source_tester.cpp
src/tests/benchmark/: benchmark_utils.cpp  benchmark_utils.h
src/tests/common/: audio_utils.h  ffi_utils.h  remote_data_track_test_access.h  test_common.h  video_utils.h
src/tests/consumer_link/: test_consumer_link.cpp
src/tests/fixtures/: token_server.mjs
src/tests/integration/: test_audio_frame.cpp  test_audio_processing_module.cpp  test_audio_source.cpp  test_data_streams.cpp  test_data_track.cpp  test_late_join_track_publication.cpp  test_logging.cpp  test_media_multistream.cpp  test_platform_audio.cpp  test_remote_track_publication.cpp  test_room.cpp  test_room_callbacks.cpp  test_room_event_deduplication.cpp  test_room_listener_cleanup.cpp  test_room_process_invalidation.cpp  test_room_reconnect.cpp  test_room_server_disconnect.cpp  test_rpc.cpp  test_sdk_initialization.cpp  test_session_stats.cpp  test_subscription_thread_dispatcher.cpp  test_token_source.cpp  test_token_source_endpoint.cpp  test_video_frame_metadata.cpp
src/tests/manual/: server_disconnect_repro.cpp
src/tests/session_manager/: CMakeLists.txt  (+7 more)
(+245 files in other folders)
